--- a/src/tags/About/About.marko
+++ b/src/tags/About/About.marko
@@ -45,7 +45,9 @@ import style from "./About.module.css";
         alt="Working portrait"
         class=style.aboutImage
         width=400
-        height=500>
+        height=500
+        sizes="(min-width: 769px) 400px, (min-width: 480px) 80vw, 100vw"
+        loading="lazy">
       <div class=style.experienceBadge>
         <span class=style.years>
           2+
