--- a/src/tags/PortfolioSection/PortfolioSection.marko
+++ b/src/tags/PortfolioSection/PortfolioSection.marko
@@ -10,7 +10,11 @@ import style from "./PortfolioSection.module.css";
       src=LogoBottomRight
       alt=""
       role="presentation"
-      style="position:absolute;height:100%;width:100%;inset:0;object-fit:cover">
+      width="500"
+      height="500"
+      sizes="500px"
+      style="position:absolute;height:100%;width:100%;inset:0;object-fit:cover"
+      loading="lazy">
   </div>
   <SectionHeader title="Featured Projects"/>
 
