--- a/src/tags/ProjectCard/ProjectCard.marko
+++ b/src/tags/ProjectCard/ProjectCard.marko
@@ -18,7 +18,9 @@ static export interface Input {
             src=(item.images[currentSlide])
             alt=item.title
             class=style.projectImage
-            style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;">
+            sizes="(min-width: 1200px) 33vw, (min-width: 769px) 50vw, 100vw"
+            style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;"
+            loading="lazy">
 
         <if=(item.images.length > 1)>
             <button
