--- a/src/tags/Sidebar/Sidebar.marko
+++ b/src/tags/Sidebar/Sidebar.marko
@@ -33,7 +33,9 @@ import style from "./Sidebar.module.css";
         alt="Achmad Ahlar Ridha"
         class=style.profileImage
         width=100
-        height=100>
+        height=100
+        sizes="100px"
+        fetchpriority="high">
     </div>
     <div>
       <div class=style.name>
