fix: adjust image width and sizes for improved responsiveness

--- a/src/tags/About/About.marko
+++ b/src/tags/About/About.marko
@@ -44,9 +44,9 @@ import style from "./About.module.css";
         src=profileImg
         alt="Working portrait"
         class=style.aboutImage
-        width=500
+        width=400
         height=500
-        sizes="(min-width: 901px) 400px, (min-width: 480px) 350px, 100vw"
+        sizes="(min-width: 901px) 400px, 400px"
         loading="lazy">
       <div class=style.experienceBadge>
         <span class=style.years>
