fix: add font preloads for improved performance and loading times

--- a/src/routes/+layout.marko
+++ b/src/routes/+layout.marko
@@ -2,6 +2,8 @@ import Sidebar from "../tags/Sidebar/Sidebar.marko";
 import "@/styles/globals.css";
 import "@fontsource-variable/geist";
 import "@fontsource-variable/geist-mono";
+import geistWoff2 from "@fontsource-variable/geist/files/geist-latin-wght-normal.woff2?url";
+import geistMonoWoff2 from "@fontsource-variable/geist-mono/files/geist-mono-latin-wght-normal.woff2?url";
 import profileImg from "@/assets/profile.webp";
 import LogoBottomRight from "@/assets/logos/logo-hero-bottom-right.svg";
 import LogoTopLeft from "@/assets/logos/logo-hero-top-left.svg";
@@ -14,9 +16,11 @@ import LogoTopLeft from "@/assets/logos/logo-hero-top-left.svg";
       name="description"
       content="Portfolio of Achmad Ahlar Ridha - Front End Web Developer">
     <title>Achmad Ahlar Ridha - Web Developer Portfolio</title>
-    <link rel="preload" as="image" href=profileImg>
+    <link rel="preload" as="image" href=profileImg>   
     <link rel="preload" as="image" href=LogoBottomRight>
     <link rel="preload" as="image" href=LogoTopLeft>
+    <link rel="preload" as="font" type="font/woff2" href=geistWoff2 crossorigin="anonymous" />
+    <link rel="preload" as="font" type="font/woff2" href=geistMonoWoff2 crossorigin="anonymous" />
   </head>
   <body>
     <div class="app-container">
