feat(hero): update hero title to include nickname

--- a/src/tags/Hero/Hero.marko
+++ b/src/tags/Hero/Hero.marko
@@ -32,7 +32,7 @@ import style from "./Hero.module.css";
       👋 Hello, I'm
     </span>
     <h1 class=style.heroTitle>
-      Achmad Ahlar Ridha
+      Achmad Ahlar Ridha (Aar)
     </h1>
     <h2 class=style.heroSubtitle>
       Building digital experiences with${" "}
